updated function and some controllers with filter section
