# controllers/car.controller.go
@@ -219,12 +219,7 @@ func (c *CarController) GetAllCars() {
 		return
 	}
 
-	tableName := "car"
-	query := `SELECT c.car_name , c.modified_by, c.model, c.car_type
-	FROM car as c
-	ORDER BY c.id
-	LIMIT ? OFFSET ?`
-	result, pagination_data, _ := models.FetchSettingPaginations(search.OpenPage, search.PageSize, tableName, query)
+	result, pagination_data, _ := models.FetchCars(search.OpenPage, search.PageSize)
 	if pagination_data["pageOpen_error"] == 1 {
 		current := pagination_data["current_page"]
 		last := pagination_data["last_page"]
