# swagger/swagger.yml
@@ -37,7 +37,7 @@ paths:
         "403":
           description: ""
   /car/cars:
-    get:
+    post:
       tags:
       - car
       operationId: CarController.get cars
@@ -46,7 +46,7 @@ paths:
         name: body
         description: Insert New User
         schema:
-          $ref: '#/definitions/dto.ValidationReq'
+          $ref: '#/definitions/dto.PaginationReq'
       - in: header
         name: Authorization
         description: Bearer YourAccessToken
@@ -169,6 +169,35 @@ paths:
             type: string
         "403":
           description: ""
+  /homepage/delete_settings:
+    post:
+      tags:
+      - homepage
+      description: |-
+        delete Setting From Database by setting_id
+        <br>
+      operationId: HomeSettingController.DeleteSetting
+      parameters:
+      - in: formData
+        name: setting_id
+        description: User can delete setting after login by setting_id
+        required: true
+        type: integer
+        format: int64
+      - in: query
+        name: lang
+        description: use en-US or hi-IN
+        type: string
+      - in: header
+        name: Authorization
+        description: Bearer YourAccessToken
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{string} string'
+        "403":
+          description: ""
   /homepage/export:
     post:
       tags:
@@ -223,6 +252,43 @@ paths:
           10 records
         type: integer
         format: int64
+      - in: header
+        name: Authorization
+        description: Bearer YourAccessToken
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.HomePagesSettingTable'
+        "403":
+          description: ""
+  /homepage/filter_hpst:
+    post:
+      tags:
+      - homepage
+      description: |-
+        In this function after login user  can FilterData with pagination and Check Count Of Match Data from  Home page settings
+        <br>
+      operationId: HomeSettingController.After Login User Can Filter Data Home Page
+        settings
+      parameters:
+      - in: formData
+        name: open_page
+        description: if you want to open specific page than give page number
+        type: integer
+        format: int64
+      - in: formData
+        name: page_size
+        description: how much data you want to show at a time default it will give
+          10 records
+        type: integer
+        format: int64
+      - in: formData
+        name: search_string
+        description: it filter in database and give match count records with pagination
+        type: string
       - in: header
         name: Authorization
         description: Bearer YourAccessToken
@@ -344,7 +410,7 @@ paths:
         description: login User
         required: true
         schema:
-          $ref: '#/definitions/models.UserLoginRequest'
+          $ref: '#/definitions/dto.UserLoginRequest'
       - in: query
         name: lang
         description: use en-US or hi-IN
@@ -535,7 +601,7 @@ paths:
         description: update New User
         required: true
         schema:
-          $ref: '#/definitions/models.UpdateUserRequest'
+          $ref: '#/definitions/dto.UpdateUserRequest'
       - in: query
         name: lang
         description: use en-US or hi-IN
@@ -553,7 +619,7 @@ paths:
         "403":
           description: ""
   /user/secure/users/:
-    get:
+    post:
       tags:
       - user
       description: |-
@@ -569,7 +635,7 @@ paths:
         name: body
         description: Insert New User
         schema:
-          $ref: '#/definitions/dto.HomeSeetingSearch'
+          $ref: '#/definitions/dto.PaginationReq'
       - in: header
         name: Authorization
         description: Bearer YourAccessToken
@@ -618,21 +684,6 @@ definitions:
       car_id:
         type: integer
         format: int32
-  dto.HomeSeetingSearch:
-    title: HomeSeetingSearch
-    type: object
-    properties:
-      lang_key:
-        type: string
-      open_page:
-        type: integer
-        format: int64
-      page_size:
-        type: integer
-        format: int64
-      setting_id:
-        type: integer
-        format: int64
   dto.NewUserRequest:
     title: NewUserRequest
     type: object
@@ -652,6 +703,16 @@ definitions:
         type: string
       role:
         type: string
+  dto.PaginationReq:
+    title: PaginationReq
+    type: object
+    properties:
+      open_page:
+        type: integer
+        format: int64
+      page_size:
+        type: integer
+        format: int64
   dto.ResetUserPassword:
     title: ResetUserPassword
     type: object
@@ -684,16 +745,34 @@ definitions:
     properties:
       username:
         type: string
-  dto.ValidationReq:
-    title: ValidationReq
+  dto.UpdateUserRequest:
+    title: UpdateUserRequest
     type: object
     properties:
-      open_page:
+      country_id:
         type: integer
         format: int64
-      page_size:
+      email:
+        type: string
+      first_name:
+        type: string
+      last_name:
+        type: string
+      phone_number:
+        type: string
+      role:
+        type: string
+      user_id:
         type: integer
         format: int64
+  dto.UserLoginRequest:
+    title: UserLoginRequest
+    type: object
+    properties:
+      password:
+        type: string
+      username:
+        type: string
   dto.VerifyEmailOTPRequest:
     title: VerifyEmailOTPRequest
     type: object
@@ -732,12 +811,6 @@ definitions:
       UpdatedDate:
         type: string
         format: datetime
-  models.UpdateUserRequest:
-    title: UpdateUserRequest
-    type: object
-  models.UserLoginRequest:
-    title: UserLoginRequest
-    type: object
   models.Users:
     title: Users
     type: object
